finished TTH-FED-proj-5-pt-1

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
          data-search="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
          <img src="../photos/thumbnails/01.jpg" alt="desert_winds">
       </a>
-      <a href="../photos/02.jpg" data-lightbox="roadtrip" data-lightbox="image-1" data-alt="Lake"
+      <a href="../photos/02.jpg" data-lightbox="roadtrip" data-alt="Lake"
          data-title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
          <img src="../photos/thumbnails/02.jpg" alt="desert_winds">
       </a>
